@@ -6,3 +6,5 @@ RemoteControlSupport=Real time and remote support
 ToSeeListOfAvailableRessources=To contact/see available ressources:
 ClickHere=Click here
 HelpCenter=Help center
+DolibarrHelpCenter=Dolibarr help and support center
+ToGoBackToDolibarr=To go back on Dolibarr, <a href="%s">click here</a>.
